# quant-research-platform

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml  technical-brief.tex
demos/: README.md  _synthetic.py  cscv_pbo_demo.py  parameter_stability_demo.py  parity_audit_demo.py  permutation_test_demo.py  walk_forward_demo.py
docs/: agentic-research-process.md  architecture.md  decision-log-philosophy.md  glossary.md  methodology.md  parity-engineering.md  why-this-stack.md
for-recruiters/: ai-ml-roles.md  quant-roles.md  software-engineering.md
src/quant_platform/: README.md  __init__.py
src/quant_platform/parity/: reconciler.py  synthetic.py
src/quant_platform/strategies/: sma_crossover.py
src/quant_platform/validation/: cscv.py  dsr.py  permutation.py  stability.py  walk_forward.py
tests/: test_cscv.py  test_dsr.py  test_parity.py  test_permutation.py  test_sma_crossover.py  test_stability.py  test_walk_forward.py
