[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_platform"
version = "0.1.0"
description = "Validation methodology for systematic trading strategies: CSCV, DSR, walk-forward, permutation tests, parity audits."
readme = "src/quant_platform/README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Salman Linjawi", email = "s-linjawi@outlook.com" },
]
keywords = ["quant", "backtest", "validation", "cscv", "pbo", "dsr", "walk-forward"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Linja1337/quant-research-platform"
Source = "https://github.com/Linja1337/quant-research-platform"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
